board_default_check.log
[eval]:1
const { Pool } = require('pg'); const pool = new Pool({ host: 'willpowered.design', port: 5432, database: 'dbyqepnzhm8tvl', user: 'ueohxsyzg8cri', password: '5g92wpcjj6as', ssl: false }); pool.query(\
                                                                                                                                                                                                       ^
Expected unicode escape

SyntaxError: Invalid or unexpected token
    at makeContextifyScript (node:internal/vm:185:14)
    at compileScript (node:internal/process/execution:383:10)
    at evalTypeScript (node:internal/process/execution:256:22)
    at node:internal/main/eval_string:74:3

Node.js v22.20.0
